<resources>
    <string name="app_name">UserRegistrationLiveDataApp</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="user_registration_app">User Registration App</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="email_or_mobile">Email or Mobile</string>
</resources>